--- a/app/views/invoices/index.html.slim
+++ b/app/views/invoices/index.html.slim
@@ -1,30 +1,21 @@
 - page_title_for @invoices
 .page-header
-  = new_link new_invoice_path
   h2 = title_for @invoices
 
 .table-responsive
   table.standard-table.table-clickable
     thead
       tr
-        th = Invoice.human_attribute_name(:booking)
         th = Invoice.human_attribute_name(:number)
         th = Invoice.human_attribute_name(:date)
-        th = Invoice.human_attribute_name(:address)
-        th = Invoice.human_attribute_name(:pre_message)
-        th = Invoice.human_attribute_name(:post_message)
-        th = Invoice.human_attribute_name(:items)
-        th = Invoice.human_attribute_name(:status)
-        th = Invoice.human_attribute_name(:others)
+        th Empfänger
+        th Teilnehmer
+        th Gesamtbetrag
     tbody
       - @invoices.each do | invoice |
         tr data = {url: url_for(invoice)}
-          td = invoice.booking
           td = invoice.number
-          td = invoice.date
-          td = invoice.address
-          td = invoice.pre_message
-          td = invoice.post_message
-          td = invoice.items
-          td = invoice.status
-          td = invoice.others
+          td = ldate invoice.date
+          td = lines_for invoice.address.split("\n")
+          td = lines_for invoice.items.map(&:attendee)
+          td = number_to_currency invoice.total_price
