--- a/app/views/bookings/show.html.slim
+++ b/app/views/bookings/show.html.slim
@@ -62,6 +62,9 @@ h3
         .col-md-4 = @booking.school
         .col-md-4 = @booking.year
 
+    fieldset
+      legend Bemerkungen
+      p = @booking.comments
 
   .col-md-3.col-md-offset-1 = render 'seminar'
 
