seminar shows always dates

--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -28,7 +28,8 @@ ol.breadcrumb
       => icon_for @seminar, text: "#{@seminar.number} - #{@seminar.title}"
     br
     small = @seminar.subtitle
-
+    br
+    small = @seminar.dates.map { |d| ldate d }.join(', ')
 
 div
   ul.nav.nav-tabs role="tablist"
