--- a/app/views/seminars/index.html.slim
+++ b/app/views/seminars/index.html.slim
@@ -6,42 +6,18 @@
       h2
         - count = @seminars.count
         - title = "#{count} #{Seminar.model_name.human count: count}"
-        - title += " (#{@seminars.total_count})" unless @seminars.total_count == count
+        - if @seminar.respond_to?(:total_count) && @seminars.total_count != count
+          - title += " (#{@seminars.total_count})"
         = icon_for Seminar, text: title
         .buttons = new_link new_seminar_path
 /.row
   .col-md-9.col-md-offset-3
 
-section
-  .col-md-3
-    ul.nav.nav-pills.nav-stacked.categories
-      - Category.cat_parents.order(:number).each do |category|
-        - active = @category.in?(category.categories + [category])
-        li class=('active' if active)
-          - label = "#{category.display_name} (#{category.all_seminars.count})"
-          = link_to label, seminars_url(category_id: category.id), title: label
-          - if active
-            ul.nav.nav-pills.nav-stacked
-              - category.categories.order(:number).each do |sub_cat|
-                - label = "#{sub_cat.display_name} (#{sub_cat.seminars.count})"
-                li class=('active' if @category == sub_cat)
-                  = link_to label, seminars_url(category_id: sub_cat.id), title: label
+ul.nav.nav-tabs
+  li class=('active' if @by == 'category') = link_to 'nach Themen', seminars_path(by: 'category')
+  li class=('active' if @by == 'date') = link_to 'nach Monat', seminars_path(by: 'date')
 
-  .col-md-8
-    .row: .col-md-12: .pull-right = paginate @seminars
-    = render 'table', seminars: @seminars, header: false
-    .row: .col-md-12: .pull-right = paginate @seminars
-
-coffee:
-  $ ->
-    $('.categories').mouseenter ->
-
-sass:
-  ul.categories
-    /*white-space: nowrap*/
-    overflow: hidden
-    ul
-      margin: 2px 0 7px 20px
-      a
-        padding: 3px 8px
-        font-size: small
+- if @by == 'category'
+  = render 'seminars/index/by_category'
+- if @by == 'date'
+  = render 'seminars/index/by_date'
