invoices in navigation

--- a/app/views/invoices/index.html.slim
+++ b/app/views/invoices/index.html.slim
@@ -2,6 +2,8 @@
 .page-header
   h2 = title_for @invoices
 
+= paginate @invoices
+
 .table-responsive
   table.standard-table.table-clickable
     thead
