--- a/app/views/seminars/show.html.slim
+++ b/app/views/seminars/show.html.slim
@@ -1,39 +1,8 @@
-- page_title_for @seminar, :number
-- module_parent = @seminar.parent
-
-ol.breadcrumb
-  li = link_to Seminar.model_name.human(count: 2), seminars_url
-  - sub_cat = @seminar.categories.first
-  - if sub_cat
-    - parent = sub_cat.parent? ? sub_cat : sub_cat.category
-    li = link_to parent.name, seminars_url(category_id: parent.id)
-    - unless parent == sub_cat
-      li = link_to sub_cat.name, seminars_url(category_id: sub_cat.id)
-  - if (module_parent)
-    li = link_to module_parent.number, module_parent
-
-.page-header
-  .buttons
-
-    => link_to fa_icon('external-link', text: 'Externe Ansicht'), seminar_visitor_url(@seminar), class: 'btn btn-default'
-    => edit_link edit_seminar_url(@seminar)
-    = copy_link new_seminar_url(copy_from: @seminar.id)
-    = render 'seminars/show/status'
-  h2
-    - if module_parent
-      => link_to icon_for(module_parent, text: "#{module_parent.number} - #{module_parent.title}"), module_parent
-      br
-      => "Modul: #{@seminar.number} - #{@seminar.title}"
-    - else
-      => icon_for @seminar, text: "#{@seminar.number} - #{@seminar.title}"
-    br
-    small = @seminar.subtitle
-    br
-    small = @seminar.dates.map { |d| ldate d }.join(', ')
+= render 'seminars/show/header'
 
 div
   ul.nav.nav-tabs
-    li.active: a data-toggle="tab" href="#attendees"   Teilnehmer
+    li.active: a data-toggle="tab" href="#attendees"   Teilnehmer (#{@seminar.attendees.booked.count})
     li:        a data-toggle="tab" href="#invoices"    Rechnungen
     li:        a data-toggle="tab" href="#general"     Allgemein
     li:        a data-toggle="tab" href="#categories"  Themen
@@ -41,6 +10,7 @@ div
     li:        a data-toggle="tab" href="#benefit"     = Seminar.human_attribute_name(:benefit)
     li:        a data-toggle="tab" href="#content"     = Seminar.human_attribute_name(:content)
     li:        a data-toggle="tab" href="#notes"       Bemerkungen
+    li = link_to 'PRAS', pras_seminar_url(@seminar)
   .tab-content
     .tab-pane#attendees.active = render 'seminars/show/attendees'
     .tab-pane#invoices         = render 'seminars/show/invoices'
@@ -50,7 +20,5 @@ div
     .tab-pane#benefit          = @seminar.benefit&.html_safe
     .tab-pane#content          = @seminar.content&.html_safe
     .tab-pane#notes            = @seminar.notes&.html_safe
+    /.tab-pane#pras             = render 'seminars/show/pras'
 
-sass:
-  ol.breadcrumb
-    margin-top: 20px
