booking comments in notification email

--- a/app/views/booking_mailer/booking_notification_email.text.erb
+++ b/app/views/booking_mailer/booking_notification_email.text.erb
@@ -26,3 +26,6 @@ Arbeitgeber:
 <%= t('bookings.form.graduate') %>: <%= @booking.school %>, <%= @booking.year %>
 <% end %>
 <% end %>
+
+Bemerkungen:
+<%= @booking.comments %>
