--- a/app/views/booking_mailer/booking_notification_email.html.slim
+++ b/app/views/booking_mailer/booking_notification_email.html.slim
@@ -54,3 +54,7 @@ table
         p = t('bookings.form.member_institution') if @booking.member_institution
         - if @booking.graduate
           p #{t('bookings.form.graduate')}: #{@booking.school} #{@booking.year}
+  - if @booking.comments.present?
+    tr
+      td: strong Bemerkungen
+      td = @booking.comments
