seminars can be canceled now

--- a/app/views/seminars/_form.html.slim
+++ b/app/views/seminars/_form.html.slim
@@ -24,6 +24,7 @@
         .row
           .col-md-3 = f.input :archived
           .col-md-3 = f.input :published
+          .col-md-3 = f.input :canceled
         = f.association :parent,
             label_method: ->(s){ "#{s.number} - #{s.title}" },
             collection: Seminar.where(parent_id: nil).order(:number),
