--- a/app/views/seminars/show/_general.html.slim
+++ b/app/views/seminars/show/_general.html.slim
@@ -11,3 +11,7 @@
     label Preis
     p = number_to_currency @seminar.price
     p = @seminar.price_text&.html_safe
+.row
+  .col-md-4
+    label Suchbegriffe
+    p = @seminar.key_words
