fix seminars index by category page

--- a/app/views/seminars/index/_by_category.html.slim
+++ b/app/views/seminars/index/_by_category.html.slim
@@ -13,8 +13,8 @@ section
                 li class=('active' if @category == sub_cat)
                   = link_to label, seminars_url(category_id: sub_cat.id), title: label
 
-  .col-md-8
-    .row
+  .col-md-9
+    /.row
       .col-md-6
 
       .col-md-6
