fix buttons position

--- a/app/views/categories/index.html.slim
+++ b/app/views/categories/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @categories
 .page-header
-  = new_link new_category_path
+  .buttons = new_link new_category_path
   h2 = title_for @categories, count: Category.count
 
 ul.list-group
