--- a/app/views/categories/show.html.slim
+++ b/app/views/categories/show.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @category, :name
 .page-header
-  = delete_link @category
+  .buttons = delete_link @category
   h2 = title_for @category
 
 - if @category.parent?
