--- a/app/views/companies/index.html.slim
+++ b/app/views/companies/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @companies
 .page-header
-  = new_link new_company_path
+  .buttons = new_link new_company_path
   h2 = title_for @companies
 
 = paginate @companies
