--- a/app/views/locations/index.html.slim
+++ b/app/views/locations/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @locations
 .page-header
-  = new_link new_location_path
+  .buttons = new_link new_location_path
   h2 = title_for @locations
 
 .table-responsive
