--- a/app/views/locations/show.html.slim
+++ b/app/views/locations/show.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @location, :name
 .page-header
-  = delete_link @location
+  .buttons = delete_link @location
   h2 = title_for @location
 
 = render 'form'
