--- a/app/views/teachers/index.html.slim
+++ b/app/views/teachers/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @teachers
 .page-header
-  = new_link new_teacher_path
+  .buttons = new_link new_teacher_path
   h2 = title_for @teachers
 
 .table-responsive
