--- a/app/views/teachers/show.html.slim
+++ b/app/views/teachers/show.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @teacher, :name
 .page-header
-  = delete_link @teacher
+  .buttons = delete_link @teacher
   h2 = title_for @teacher
 
 = render 'form'
