--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @users
 .page-header
-  = new_link new_user_path
+  .buttons = new_link new_user_path
   h2 = title_for @users
 
 .table-responsive
