--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @user
 .page-header
-  = delete_link @user
+  .buttons = delete_link @user
   h2 = title_for @user
 
 = render 'form'
