--- a/lib/templates/slim/scaffold/index.html.slim
+++ b/lib/templates/slim/scaffold/index.html.slim
@@ -1,6 +1,6 @@
 - page_title_for @<%= plural_file_name %>
 .page-header
-  = new_link new_<%= singular_table_name %>_path
+  .buttons = new_link new_<%= singular_table_name %>_path
   h2 = title_for @<%= plural_file_name %>
 
 .table-responsive
