--- a/app/views/teachers/show.html.slim
+++ b/app/views/teachers/show.html.slim
@@ -5,4 +5,6 @@
 
 = render 'form'
 
+=> link_to fa_icon('table', text: 'Exportieren'), seminars_teacher_url(@teacher, format: :xlsx), class: 'btn btn-default btn-xs'
+
 = render 'seminars/table', seminars: @teacher.seminars
