--- a/app/views/seminars/index.html.slim
+++ b/app/views/seminars/index.html.slim
@@ -17,6 +17,7 @@ ul.nav.nav-tabs
   li class=('active' if @by == 'category') = link_to 'nach Themen', seminars_path(by: 'category')
   li class=('active' if @by == 'date')     = link_to 'nach Monat', seminars_path(by: 'date')
   li class=('active' if @by == 'calendar') = link_to 'Kalender', seminars_path(by: 'calendar')
+  li class=('active' if @by == 'canceled') = link_to 'Ausgefallen', seminars_path(by: 'canceled')
 
 - if @by == 'category'
   = render 'seminars/index/by_category'
@@ -24,3 +25,5 @@ ul.nav.nav-tabs
   = render 'seminars/index/by_date'
 - if @by == 'calendar'
   = render 'seminars/index/by_calendar'
+- if @by == 'canceled'
+  = render 'seminars/index/by_canceled'
