New model Catalog, stored in session as current

--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -20,6 +20,8 @@
           li class=('active' if controller_name == 'invoices')
             = link_to title_for_model(Invoice, with_icon: true), invoices_url, tabindex: -1
           = navbar_dropdown 'Stammdaten', active: controller_name.in?(%w(locations teachers categories users)) do
+            li class=('active' if controller_name == 'catalogs')
+              = link_to title_for_model(Catalog, with_icon: true), catalogs_url, tabindex: -1
             li class=('active' if controller_name == 'locations')
               = link_to title_for_model(Location, with_icon: true), locations_url, tabindex: -1
             li class=('active' if controller_name == 'teachers')
@@ -32,6 +34,9 @@
               = link_to title_for_model(User, with_icon: true), users_url, tabindex: -1
 
         ul.nav.navbar-nav.navbar-right
+          = navbar_dropdown current_catalog.title do
+            - Catalog.all.each do |catalog|
+              li = link_to catalog.year, [catalog, action: :make_current]
           li
             form.navbar-form.navbar-right role="search" action=search_url
               .form-group
